Fix : 필요한 응답값 추가